[package]
name = "cobalt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse = "1.7.0"
tokio = { version = "1.17.0", features = ["full"] }
bpaf = "0.4.3"
toml = "0.5"
log = "0.4"
simple_logger = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
